2008-01-20  Johan Dahlin  <johan@gnome.org>

	* gio/Makefile.am:
	* gio/ginputstream.override:
	* gio/gio.override:
	* gio/giomodule.c:
	* gio/goutputstream.override:
	* gio/gvolumemonitor.override:
	* gio/unix.override:
	* gio/unixmodule.c:

	Split out overrides into more files. Fix up module description in 
	comments

2008-01-20  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override (_wrap_g_simple_async_result_get_buffer): Add
	a new method, to fetch the buffer
	(_wrap_g_input_stream_read_async): Save a reference to the buffer.
	* tests/test_gio.py (TestInputStream.testReadAsync.callback): 
	Check the content
	
	* tests/test_gio.py (TestInputStream.testReadAsyncError): 
	New function to test error condition of async read.

	* gio/gio.override (async_result_callback_marshal): Grab a reference
	to callback/data.

2008-01-19  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override (_wrap_g_output_stream_write): Impl.
	* gio/gio.override:
	* gio/unix.defs:
	Add GUnixInputStream type and methods

	* tests/common.py:
	* tests/test_gio.py:
	Add GIO tests.

	* gio/gio.override (_wrap_g_app_info_get_all_for_type),
	(_wrap_g_app_info_get_all),
	(_wrap_g_drive_get_volumes): Implement.

	* gio/gio.override (async_result_callback_marshal): New marshaller
	for async results
	(_wrap_g_input_stream_read_async): Impl.
	* gio/gio-types.defs: Add SimpleAsyncRequest
	* gio/giomodule.c: Register enums/constants

	* gio/gio.override: Fix a silly bug so it possible to read files 
	larger than 8192 bytes.

	* gio/gio.defs: Set null-ok for all cancelable as well.

	* gio/__init__.py: set gio.unix to None if it's not available

	* gio/gio.override: Implement InputStream.read efficiently without
	copying the strings, based on the standard libararys file.read() 
	implementation.

	* gio/gio-types.defs (Cancellable): Add wrapper.

	* gio/gio.defs (replace): Do not require cancellable argument 
	to be specified, default to NULL if not.

	* Makefile.am:
	* codegen/Makefile.am: